Reviewing, almost ready to deliver

--- a/BackMatter/Recomendations.tex
+++ b/BackMatter/Recomendations.tex
@@ -2,11 +2,11 @@
 
 El enfoque de meta-learning presentado en esta Tesis es utilizable en problemas prácticos y proporciona información importante en el proceso de AutoML, lo que le permite obtener mejores resultados en la búsqueda de flujos de algoritmos. Sin embargo, aún se encuentra en una etapa de desarrollo inicial, por lo que es necesario seguir mejorando sus capacidades mediante un estudio más exhaustivo.
 
-El conocimiento obtenido con las distintas estrategias de meta-learning fue añadido a AutoML en el proceso de inicialización de la búsqueda de flujos de algoritmos. Sin embargo, existen distintas formas de añadir la experiencia previa obtenida mediante meta-learning al proceso de optimización. Algunas estrategias, como la desarrollada con el modelo de XGBoost puede ser utilizada como modelo sustituto que guíe el proceso de búsqueda de flujos. De esta forma, el conocimiento previo obtenido de experiencias pasadas será utilizable en la estrategia de búsqueda de flujos a lo largo del proceso de optimización.
+El conocimiento obtenido con las distintas estrategias de meta-learning fue añadido a AutoML en el proceso de inicialización de la búsqueda de flujos de algoritmos. Sin embargo, existen distintas formas de añadir la experiencia previa obtenida mediante meta-learning al proceso de optimización. Algunas estrategias, como la desarrollada con el modelo de XGBoost puede ser utilizada como modelo sustituto que guíe el proceso de búsqueda de flujos. De esta manera, el conocimiento previo obtenido de experiencias pasadas será utilizable en la estrategia de búsqueda de flujos a lo largo del proceso de optimización.
 
-Además, en la experimentación realizada en esta investigación se analizan los resultados obtenidos en el proceso de inicialización de AutoGOAL con un conjunto inicial de 15 flujos de algoritmos. El tamaño de este conjunto inicial, que es el usado para añadir conocimiento previo al proceso de AutoML, puede variar considerablemente el rendimiento final obtenido en la búsqueda de flujos~\cite{rankml}. Por lo tanto, se recomienda la realización de experimentos para encontrar el tamaño de ranking final óptimo para ser añadido como conjunto inicial a AutoML.
+Además, en la experimentación realizada en esta investigación se analizan los resultados obtenidos en el proceso de inicialización de AutoGOAL con un conjunto inicial de 15 flujos de algoritmos. El tamaño de este conjunto inicial, que es el utilizado para añadir conocimiento previo al proceso de AutoML, puede variar considerablemente el rendimiento final obtenido en la búsqueda de flujos~\cite{rankml}. Por lo tanto, se recomienda la realización de experimentos para encontrar el tamaño de ranking final óptimo para ser añadido como conjunto inicial a AutoML.
 
-La generación de rankings en la estrategia de vecinos cercanos es otro de los aspectos que se puede estudiar más detalladamente. El método de generación de ranking mediante el mecanismo ponderado, en el que se tiene en cuenta la distancia entre el dataset a analizar y los datasets de la base de conocimiento y el valor del rendimiento de un flujo de algoritmos, puede ser mejorado. En la versión utilizada, se le da la misma importancia a ambos factores, evaluar el peso asignado a uno de los dos componentes puede hacer que mejoren los resultados obtenidos. De esta manera, para la generación de rankings, los resultados de rendimiento de los flujos de algoritmos pueden considerarse más importantes, priorizando este factor en el ranking resultante.
+La generación de rankings en la estrategia de vecinos cercanos es otro de los aspectos que se puede estudiar más detalladamente. El método de creación de ranking mediante el mecanismo ponderado, en el que se tiene en cuenta la distancia entre el dataset a analizar y los datasets de la base de conocimiento y el valor del rendimiento de un flujo de algoritmos, puede ser mejorado. En la versión utilizada, se le da la misma importancia a ambos factores, evaluar el peso asignado a uno de los dos componentes puede hacer que mejoren los resultados obtenidos. De esta forma, para la generación de rankings, los resultados de rendimiento de los flujos de algoritmos pueden considerarse más importantes, priorizando este factor en el ranking resultante.
 
 
 \end{recomendations}
