--- a/FrontMatter/Abstract.tex
+++ b/FrontMatter/Abstract.tex
@@ -1,12 +1,12 @@
-\begin{abstract}
+\section*{Abstract}
 
-El campo de aprendizaje de máquinas automático (AutoML) se ha destacado como una de las principales alternativas para encontrar soluciones óptimas o cercanas para problemas complejos de aprendizaje automático. A pesar del reciente éxito de AutoML, todavía quedan muchos desafíos. El aprendizaje de AutoML es un proceso que consume mucho tiempo y puede llegar a ser ineficiente. Meta-learning es descrito como el proceso de aprender de experiencias pasadas aplicando varios algoritmos de aprendizaje en diferentes tipos de datos, y por lo tanto reduce el tiempo necesitado para aprender nuevas tareas. Una de las ventajas de las técnicas de meta-learning es que pueden servir como un apoyo eficiente para el proceso de AutoML, aprendiendo de tareas previas los mejores algoritmos para resolver un determinado tipo de problema. De esta manera, es posible acelerar el proceso de AutoML, obteniendo mejores resultados en el mismo período de tiempo. El objetivo de esta tesis es diseñar una estrategia de meta-learning para dominios genéricos en el aprendizaje automático.
+The field of machine learning (AutoML) has been highlighted as one of the main alternatives for finding good solutions for complex machine learning problems. Despite the recent success of AutoML, many challenges remain. Learning AutoML is a time-consuming process and can be inefficient. Meta-learning is described as the process of learning from past experiences by applying various learning algorithms on different types of data, and therefore reduces the time required to learn new tasks. One of the advantages of meta-learning techniques is that they can serve as an efficient support for the AutoML process, learning from previous tasks the best algorithms to solve a certain type of problem. In this way, it is possible to speed up the AutoML process, obtaining better results in the same period of time. The objective of this thesis is to design a meta-learning strategy for generic domains in machine learning.
 
-La propuesta de meta-learning implementada es capaz de abordar una gran variedad de tareas mediante la selección de características capaces de representarlas. Además, explorando la interacción entre las características de los datasets y la estructura de los flujos, el método propuesto es capaz de identificar flujos con un buen rendimiento sin realizar un análisis computacionalmente costoso. Como sistema de AutoML complementario se eligió AutoGOAL, que destaca por su capacidad de generar soluciones eficaces para una amplia gama de dominios, permitiéndole resolver una gran cantidad de tareas. AutoGOAL es usado para la generación de flujos de algoritmos para crear la base de conocimiento, por lo que se presenta gran diversidad en los flujos guardados debido a la variedad de herramientas de aprendizaje automático que AutoGOAL utiliza. 
+The implemented meta-learning proposal is capable of tackling a wide variety of tasks by selecting features capable of representing the space defined by them.
+% In addition, by exploring the interaction between the characteristics of the datasets and the structure of the flows, the proposed method is capable of identifying flows with good performance without performing a computationally expensive analysis.
+As a complementary AutoML system, AutoGOAL was chosen, which stands out for its ability to generate effective solutions for a wide range of domains, allowing it to solve many tasks. AutoGOAL is used for the generation of machine learning pipelines to create the knowledge base and in the search for pipelines initialized with the designed meta-learning approach. % en Due to the variety of machine learning tools it uses, there is a great diversity in the saved flows.
 
-El enfoque de meta-learning desarrollado consiste en la selección de un conjunto de flujos de algoritmos para ser propuestos en la inicialización del proceso de optimización de un sistema de AutoML. La elección de este conjunto de flujos se realiza mediante un enfoque de ranking, en el que para un nuevo dataset se seleccionan los \texttt{k} mejores flujos de algoritmos. Para esto, se implementaron varias estrategias. La evaluación experimental realizada en un gran número de datasets muestra que estas estrategias de meta-learning obtienen mejores resultados en cuanto a los flujos de algoritmos encontrados con respecto a AutoGOAL sin meta-learning, sin ninguna consideración de dominio o problema específico.
-
-\end{abstract}
+The meta-learning approach developed consists of selecting a set of machine learning pipelines to be proposed in the initialization of the optimization process of an AutoML system. The choice of this set of pipelines is carried out using a ranking approach, in which the \texttt{k} best piplines are selected for a new dataset. For this, several strategies were implemented. The experimental evaluation carried out on a large number of datasets shows that these meta-learning strategies obtain better results in terms of the pipelines found with respect to AutoGOAL without meta-learning.
 
 %
 %\begin{center}
