--- a/FrontMatter/SupervisorOpinion.tex
+++ b/FrontMatter/SupervisorOpinion.tex
@@ -1,3 +1,46 @@
 \begin{opinion}
 
+
+En la actualidad el Aprendizaje Automático ha llegado a todas las ramas de la industria, ayudando a resolver un gran número de problemas pero 
+creando la necesidad de un enorme número de expertos para poder utilizar las herramientas adecuadas en cada caso.
+En este escenario el AutoML propone una solución ayudando con la selección de forma automática de las mejores soluciones con el problema añadido de que incrementa
+el costo computacional ya que tiene que evaluar muchas soluciones para resolver cada problema. %Realizando esta tarea cada vez.
+El área de investigación en que incursiona la estudiante propone un enfoque para que los sistemas de AutoML puedan aprender de su experiencia y 
+disminuir el tiempo de respuesta y aumentar la calidad de las soluciones encontradas.
+
+La estudiante Loraine Monteagudo en esta investigación se adentró en un tema del estado del arte de gran actualidad y para eso tuvo que utilizar 
+conocimientos de varias asignaturas de la carrera y otros que no son parte del curriculum estandar.
+Su propuesta implicó el diseño de características para describir problemas de aprendizaje de máquina, el diseño e implementación de varias estrategias de meta-learning y 
+una amplia experimentación con cientos de datasets del estado del arte.
+Además implicó conocer una herramienta de AutoML nueva e incorporarle su estrategia para evaluar y comparar sus resultados en la práctica.
+
+Sus resultados resultan muy prometedores, reportando mejoras que reducen a la mitad el error final de la solución encontrada, utilizando el mismo costo computacional.
+Esta mejora es considerable para una herramienta del estado del arte, que ya lograba resultados comparables a las mejores herramientas de AutoML existentes.
+Más aún, las estrategias desarrolladas en esta investigación han sido aplicadas solamente a una parte pequeña del proceso de 
+AutoML --la inicialización de la población de soluciones-- pero pueden ser extendidos fácilmente a todo el proceso de optimización.
+
+Loraine ha formado parte del grupo de investigación de inteligencia artificial desde sus inicios en la carrera.
+Desde entonces ha participado en cuanto jornada científica, taller, y fórum se le ha puesto delante, siempre con una buena dosis de creatividad y una gran cantidad de esfuerzo.
+Esta tesis no es menos, presenta resultados de primer nivel que son susceptibles de ser publicados en los mejores eventos científicos del área del AutoML, y demuestra con creces que Loraine ha alcanzado las habilidades y la madurez científica que esperamos de los mejores graduados de Ciencia de la Computación.
+Con esta tesis, Loraine cierra una de las etapas más importantes de su formación profesional, y se convierte así, por derecho propio, en una miembro más de este gremio de científicos, donde seguro tendrá una carrera tan brillante como ha sido hasta ahora su vida de estudiante.
+
+
+\begin{center}
+	\begin{tikzpicture}[x=.01\linewidth, y=.01\linewidth]
+	\node[anchor=south west,inner sep=0] (image) at (6, -4) {\includegraphics[width=.21\linewidth]{Graphics/suilan.png}};
+	\draw[-, thick] (-1, 0) edge (31, 0);
+	\node[below,align=center,text width=.4\linewidth] at (15, -1) {Msc. Suilan Estévez Velarde};
+	\end{tikzpicture}
+	\begin{tikzpicture}[x=.01\linewidth, y=.01\linewidth]
+	\node[anchor=south west,inner sep=0] (image) at (6, -3) {\includegraphics[width=.21\linewidth]{Graphics/daniel.jpg}};
+	\draw[-, thick] (-1, 0) edge (31, 0);
+	\node[below,align=center,text width=.4\linewidth] at (15, -1) {Lic. Daniel Alejandro Valdés Pérez};
+	\end{tikzpicture}
+%	\begin{tikzpicture}[x=.01\linewidth, y=.01\linewidth]
+%	%\node[anchor=south west,inner sep=0] (image) at (0, 0) {\includegraphics[width=.3\linewidth]{}};
+%	\draw[-, thick] (-1, 0) edge (31, 0);
+%	\node[below,align=center,text width=.3\linewidth] at (15, -1) {Dra. Marta Lourdes Baguer D\'iaz-Roma\~nach};
+%	\end{tikzpicture}
+\end{center}
+
 \end{opinion}
