--- a/FrontMatter/Thanks.tex
+++ b/FrontMatter/Thanks.tex
@@ -1,4 +1,16 @@
 \begin{acknowledgements}
 
+Este viaje de 5 años y medio ha sido largo y hay muchas personas que se merecen estar en esta lista de agradecimientos, me disculpo con aquellas personas a las que dejo afuera. Quiero agradecer a todos aquellos con los que he compartido y que han cuidado de mí, por creer en mí y por volverme mejor.
+
+A mi familia, de la que siempre he recibido apoyo incondicional. A mi hermana Lorena, la persona que mejor me conoce y mi principal soporte. A mi madre, por estar pendiente de cada pequeño detalle de mi vida y estar ahí siempre. A mi padre, quien me enseñó a nunca estar satisfecha y que siempre podía ser mejor. A mi hermana Grettel, quien a pesar de estar lejos siempre ha sido mi principal inspiración. A mi tía Gilda, quien me enseñó que hay cosas más importantes que ser inteligente. A mis tías, y todos mis primos por su apoyo todos estos años y por hacerme esforzarme más para que yo les pudiese explicar, de una forma que ellos pudiesen entender, de que se trataba esta tesis. A Cachita y Luivca, por darme un segundo hogar. A Omarito, por los divertidos debates de las 3 de la mañana. A Dani, por toda su paciencia, por estar ahí siempre para celebrar conmigo cuando estoy alegre y consolarme cuando estoy triste, por hacer este año y medio de soledad y aislamiento mucho más llevadero.% Por compartir conmigo todos los momentos de estrés, en estos últimos 2 años te has vuelto indispensable para mí.
+
+
+A todos mis compañeros, los que se gradúan conmigo y los que se quedaron atrás. A Noly y Amanda, mis mejores amigos de estos 5 años, con los que he compartido proyectos, preocupaciones, sonrisas y lágrimas, y la principal razón que hizo que este tiempo fuese tan divertido. A Carlos, el mejor compañero de equipo que tuve. A Dayany, mi compañera de GIA, con la que compartí todas las dudas y preguntas. A Tony, Jota, Dalianys, Daniel, Harold, Oscar, Raúl, Karl Lewis, Tenorio, Liset, Eric, Olivia y Juan Carlos por todas las fiestas, casas en la playa y horas de estudio.
+
+A todos mis profesores, quienes me hicieron enamorarme de la carrera y de una forma u otra me han ayudado a convertirme en la persona que soy. En especial a mis profesores de GIA, quienes lograron la increíble hazaña de hacerme sentir que pertenezco a un lugar. A Yudivián, quien me convirtió en su niña y cuidó de mí durante las jornadas científicas y asignaturas de la carrera. A Piad, por estar ahí apoyándome en las jornadas y eventos. A mis tutores, que tuvieron un rol protagónico en este trabajo. En especial, a Suilan, no solo por su apoyo en esta investigación, sino por creer en mí y haberme ayudado cuando ni siquiera me conocía. 
+
+%Por último, a mi tía que hace tiempo no veo que me hizo prometerle que me tomaría la universidad con calma... creo que no pude cumplir mi promesa.
+
+Muchas gracias a todos...
 
 \end{acknowledgements}
