--- a/Thesis.tex
+++ b/Thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsbsy}
+\usepackage{tikz}
 \usepackage{caption,booktabs}
 \captionsetup{
 	justification = centering
@@ -91,7 +92,7 @@
 
 \title{Una estrategia de Meta-Learning para flujos genéricos de AutoML}
 \author{Loraine Monteagudo García}
-\advisor{\\Msc. Suilan Estéves Velarde \\
+\advisor{\\Msc. Suilan Estévez Velarde \\
 		Lic. Daniel Alejandro Valdés Pérez}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
@@ -126,6 +127,7 @@
 %\include{FrontMatter/Dedication}
 \include{FrontMatter/Thanks}
 \include{FrontMatter/SupervisorOpinion}
+\include{FrontMatter/Resumen}
 \include{FrontMatter/Abstract}
 \include{FrontMatter/Contents}
 
