--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -8,22 +8,22 @@
 
 \qquad 
 
-En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje automático, en inglés \textit{machine learning} (ML)~\cite{hey2020machinelearning}. Sin embargo, el rendimiento de muchos métodos de aprendizaje automático es sensible a una gran variedad de decisiones~\cite{dyrmishi2019decision, radwa2019automated}, lo que constituye una barrera para nuevos usuarios~\cite{crisan2021fits}. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (como \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para desarrollar modelos eficientes de aprendizaje automático.
+En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje automático, en inglés \textit{machine learning} (ML)~\cite{hey2020machinelearning}. Sin embargo, el rendimiento de muchos métodos de aprendizaje automático es sensible a una gran variedad de decisiones~\cite{dyrmishi2019decision, radwa2019automated}, lo que constituye una barrera para nuevos usuarios~\cite{crisan2021fits}. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (como \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del proceso de prueba y error que es repetido en cada aplicación para desarrollar modelos eficientes de aprendizaje automático.
 
 Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros y la selección de algoritmos)~\cite{thornton2013auto}, los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje automático, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros~\cite{fuerer2015efficient, olson2019tpot, paszke2019pytorch, chen2018autostacker, swearingen2017atm}.
 
-AutoML está diseñado para reducir la demanda de los científicos de datos y permitir a los expertos construir automáticamente aplicaciones de ML sin mucho conocimiento estadístico y de aprendizaje automático. Por lo tanto, AutoML hace accesible enfoques de machine learning a los usuarios no expertos que están interesados en aplicarlos, pero no tienen los recursos para aprender sobre las tecnologías involucradas en detalle~\cite{hutter2019autmlbook}. Con el crecimiento exponencial del poder computacional y de los datos digitales, AutoML se ha convertido en un tema de creciente importancia tanto en la industria como en la academia~\cite{xin2019automl}. 
+AutoML está concebido para reducir la carga de trabajo de los científicos de datos y permitir a los expertos construir automáticamente aplicaciones de ML sin mucho conocimiento en el campo. Por lo tanto, AutoML hace accesible enfoques de aprendizaje automático a los usuarios no expertos que están interesados en aplicarlos, pero no tienen los recursos para aprender sobre las tecnologías involucradas en detalle~\cite{hutter2019autmlbook}. Con el crecimiento exponencial del poder computacional y de los datos digitales, AutoML se ha convertido en un tema de creciente importancia tanto en la industria como en la academia~\cite{he2021automl}. 
 
 Los enfoques de AutoML ya son lo suficientemente maduros como para
-rivalizar y, a veces, incluso superar a los expertos en aprendizaje automático humano. En pocas palabras, AutoML puede mejorar el rendimiento y, al mismo tiempo, ahorrar cantidades sustanciales de tiempo y dinero, ya que los expertos en aprendizaje automático son difíciles de encontrar y costosos. Como resultado, el interés comercial en AutoML ha crecido drásticamente en los últimos años, y varias de las principales empresas de tecnología están desarrollando sus propios sistemas AutoML~\cite{hutter2019autmlbook}.
+rivalizar e incluso superar a los expertos en aprendizaje automático humano. En pocas palabras, AutoML puede mejorar el rendimiento y, al mismo tiempo, ahorrar cantidades sustanciales de tiempo y dinero, ya que los expertos en aprendizaje automático son difíciles de encontrar y de formar. Como resultado, el interés comercial en AutoML ha crecido drásticamente en los últimos años, y varias de las principales empresas de tecnología están desarrollando sus propios sistemas AutoML~\cite{hutter2019autmlbook}.
 
-Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas~\cite{dyrmishi2019decision}. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o meta-datos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de algoritmos de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
+Una de las limitaciones presentes en los primeros sistemas de AutoML consiste en su inhabilidad de reusar conocimiento previo para solucionar nuevas tareas~\cite{dyrmishi2019decision}. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o meta-datos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de algoritmos de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
 
 \section*{Problema}
 
-A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de ML es computacionalmente costosa y toma mucho tiempo~\cite{crisan2021fits}. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML~\cite{fuerer2015efficient}. Esto hace que el proceso de desarrollo de modelos de ML siga siendo un proceso tedioso y lento, limitando la aplicabilidad de AutoML a problemas prácticos en la industria, así como su potencial para acelerar la investigación científica~\cite{crisan2021fits}.
+A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de soluciones de ML es computacionalmente costosa y toma mucho tiempo~\cite{crisan2021fits}. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML~\cite{fuerer2015efficient}. Esto hace que el proceso de desarrollo de modelos de ML siga siendo un proceso lento, limitando la aplicabilidad de AutoML a problemas prácticos en la industria, así como su potencial para acelerar la investigación científica~\cite{crisan2021fits}.
 
-Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde cero con cada nuevo dataset. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
+Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde el principio con cada dataset nuevo. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. % Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
 
 % Although progress in AutoML is vast, the considered scenarios are somewhat constrained, e.g., in the type of approached problem, in the assumptions on data, in the size of datasets, etc. In this context, one of the most desirable features for AutoML methods is to work under a lifelong machine learning (LML) setting. LML refers to systems that can sequentially learn many tasks from one or more domains in its lifetime, these systems (not restricted to supervised learning) require the ability to retain knowledge, adapt to changes and transfer knowledge when learning a new task. An AutoML method that learns from different tasks and that is able to adapt itself during its lifetime would comprise a competitive and robust all-problem machine learning solution. (drift)
 
@@ -34,44 +34,47 @@ En esta tesis se realiza una propuesta para superar estos obstáculos. El princi
 
 % Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En constraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener informacción más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
 
-Mediante meta-learning, se intenta ganar un poco de perspectiva sacada de los meta-datos de experimentos de aprendizaje automático. Los resultados de cada entrenamiento es guardado con caracterizaciones del dataset y sus detalles de rendimiento, y son usados en las ejecuciones futuras. Ha habido substancial interés en el espacio de meta-learning en los recientes años y muchos sistemas de AutoML lo han integrado.
+Mediante meta-learning, se intenta ganar perspectiva sacada de los meta-datos de experimentos de aprendizaje automático. Los resultados de cada entrenamiento son guardados con caracterizaciones del dataset y sus detalles de rendimiento, y son usados en las ejecuciones futuras. En los recientes años se ha desarrollado un substancial interés en el campo de meta-learning y muchos sistemas de AutoML lo han integrado~\cite{fuerer2015efficient, maher2019smartml, drori2018alphad3m, yang2018oboe, zimmer2021auto, Feurer2020AutoSklearn2T}.
 
-Sin embargo, estas herramientas de meta-learning son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. Las técnicas actuales de meta-learning se centran principalmente en un subconjunto específico de algoritmos, a menudo adaptados a una biblioteca o conjunto de herramientas. Resolver problemas complejos, por otro lado, requiere la combinación de diferentes herramientas que podrían no estar disponibles en una misma biblioteca. Para la aplicación de meta-learning es necesario la representación de estos problemas mediante caracterizaciones informativas para los datasets y representaciones descriptivas para las soluciones obtenidas mediante diferentes herramientas. De esta forma, es posible que meta-learning sea capaz de resolver una gran cantidad de tareas.
+Sin embargo, estas herramientas de meta-learning no son suficientemente flexibles para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. Las técnicas actuales de meta-learning se centran principalmente en un subconjunto específico de algoritmos, a menudo adaptados a una biblioteca o conjunto de herramientas. Resolver problemas complejos, por otro lado, requiere la combinación de diferentes herramientas que podrían no estar disponibles en una misma biblioteca. Para la aplicación de meta-learning es necesario la representación de estos problemas mediante caracterizaciones informativas para los datasets y representaciones descriptivas para las soluciones obtenidas mediante diferentes herramientas. De esta forma, es posible que meta-learning sea capaz de resolver una gran cantidad de tareas.
 
 \section*{Antecedentes}
 
-Esta tesis forma parte de las líneas de investigación del grupo de Inteligencia Artificial de la Facultad de Matemática y Computación de la Universidad de La Habana. En dicho grupo se ha diseñado el sistema de AutoGOAL,  por lo que esta herramienta es la usada para la incorporación de conocimiento experto mediante meta-learning. AutoGOAL es un sistema AutoML implementado como una biblioteca de código abierto en el lenguaje de programación Python. Utiliza técnicas heterogéneas, que a diferencia de otros sistemas, puede construir automáticamente flujos de aprendizaje automático que combinen técnicas y algoritmos de diferentes bibliotecas, incluidos clasificadores lineales, herramientas de procesamiento de lenguaje natural y redes neuronales.
+Esta tesis forma parte de las líneas de investigación del grupo de Inteligencia Artificial de la Facultad de Matemática y Computación de la Universidad de La Habana. En dicho grupo se ha diseñado el sistema de AutoGOAL~\cite{autogoal},  por lo que esta herramienta es la usada para la incorporación de conocimiento experto mediante meta-learning. AutoGOAL es un sistema AutoML implementado como una biblioteca de código abierto en el lenguaje de programación Python. Utiliza técnicas heterogéneas, que a diferencia de otros sistemas, puede construir automáticamente flujos de aprendizaje automático que combinen técnicas y algoritmos de diferentes bibliotecas, incluidos clasificadores lineales, herramientas de procesamiento de lenguaje natural y redes neuronales.
 
 \section*{Objetivos}
 
-El objetivo general de esta tesis es el diseño de una estrategia de meta-learning para métodos genéricos de AutoML, a partir de la combinación de técnicas de aprendizaje automático y optimización. La estrategia implementada tendrá el objetivo de acelerar el proceso de búsqueda de AutoML añandiendo conocimiento previo, de tal manera que se obtengan mejores resultados en el mismo período de tiempo.
+El objetivo general de esta tesis es el diseño de una estrategia de meta-learning para métodos genéricos de AutoML, a partir de la combinación de técnicas de aprendizaje automático y optimización. La estrategia implementada tendrá el objetivo de acelerar el proceso de búsqueda de AutoML añadiendo conocimiento previo, de tal manera que se obtengan mejores resultados en el mismo período de tiempo.
 
  Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión), el algoritmo de meta-learning propuesto tiene el objetivo de producir una lista de ranking de los modelos candidatos basada en el rendimiento esperado de estos modelos en el dataset dado. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos. Teniendo este meta-conocimiento, es posible estimar el rendimiento de esos flujos y sugerirlos. Esta estimación, aunque no es exacta, mejorará el proceso de búsqueda de sistemas de aprendizaje de máquinas automático. Para realizar esto será necesario:
  
  %El resultado obtenido tiene como objetivo sugerir rápidamente algunas inicializaciones para AutoGOAL. 
 
 \begin{itemize}
-	\item Definir caracterizaciones para describir los datasets.
+	\item Estudiar diferentes herramientas de meta-learning, así como sistemas de Auto-ML presentes en la literatura.
+	\item Definir caracterizaciones para describir los datasets de un conjunto de tareas.
 	\item Definir una representación para las soluciones generadas de los datasets.
 	\item Diseñar un algoritmo para recomendar una lista de soluciones para un nuevo dataset basado en estos datos.
 	\item Incorporar el conocimiento previo obtenido con meta-learning en AutoGOAL para realizar una búsqueda de algoritmos más eficiente.
-	\item Realizar experimentos para evaluar la solución propuesta.
+	\item Realizar experimentos en un gran conjunto de datasets para evaluar la solución propuesta.
 \end{itemize}
 
 \section*{Propuesta}
 
-El enfoque de meta-learning propuesto, está compuesto por dos fases principales: la fase offline, que es de aprendizaje y la fase online, que es de recomendación. El objetivo de la fase offline es obtener los meta-datos necesarios para la solución del problema de meta-learning propuesto: la obtención de un ranking de modelos de aprendizaje para una determinada tarea. En esta fase se obtiene una caracterización de los datasets y el rendimiento y la estructura de un conjunto soluciones en dichos datasets. Por otro lado en la fase online, dada una tarea con los meta-datos ganados del análisis de las tareas similares y el entrenamiento de un conjunto de algoritmos en dichos datasets, el objetivo es producir una lista de las soluciones prometedoras para resolver la tarea inicial. Esta lista será utilizada para sugerir rápidamente algunas inicializaciones para el proceso de búsqueda de algoritmos de AutoGOAL.
+El enfoque de meta-learning propuesto, está compuesto por dos fases principales: la fase offline, de aprendizaje y la fase online, de recomendación. El objetivo de la fase offline es obtener los meta-datos necesarios para la solución del problema de meta-learning propuesto: la obtención de un ranking de modelos de aprendizaje para una determinada tarea. En esta fase se obtiene una caracterización de los datasets y el rendimiento y la estructura de un conjunto soluciones en dichos datasets. Por otro lado en la fase online, dada una tarea con los meta-datos ganados del análisis de las tareas similares y el entrenamiento de un conjunto de algoritmos en dichos datasets, el objetivo es producir una lista de las soluciones prometedoras para resolver la tarea inicial. Esta lista será utilizada para sugerir rápidamente algunas inicializaciones para el proceso de búsqueda de algoritmos de AutoGOAL.
 
 
 
 \section*{Estructura de la tesis}
 
-El resto de la tesis está organizada de la siguiente manera:
+%El resto de la tesis está organizada de la siguiente manera:
+%
+%\begin{description}
+%	\item[Capítulo \ref{chapter:review}:] introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para tratas con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML.
+%	\item[Capítulo \ref{chapter:proposal}:] describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usados y los meta-modelos desarrollados.
+%	\item[Capítulo \ref{chapter:results}:] describe brevemente los aspectos de la metodología experimental adoptada, investiga los resultados obtenidos y se realiza una discusión de los mismos.
+%	\item[Conclusiones:] presenta las conclusiones finales  de esta tesis.
+%	\item[Recomendaciones:] presenta algunas recomendaciones para estudios futuros.
+%\end{description}
 
-\begin{description}
-	\item[Capítulo \ref{chapter:review}:] introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para tratas con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML.
-	\item[Capítulo \ref{chapter:proposal}:] describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usados y los meta-modelos desarrollados.
-	\item[Capítulo \ref{chapter:results}:] describe brevemente los aspectos de la metodología experimental adoptada, investiga los resultados obtenidos y se realiza una discusión de los mismos.
-	\item[Conclusiones:] presenta las conclusiones finales  de esta tesis.
-	\item[Recomendaciones:] presenta algunas recomendaciones para estudios futuros.
-\end{description}
+El resto de la tesis está organizada de la siguiente manera. El Capítulo~\ref{chapter:review} introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para tratar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML. Luego, en el Capítulo~\ref{chapter:proposal} se describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usadas y las estrategias desarrolladas. En el Capítulo~\ref{chapter:results} se exponen brevemente los aspectos de la metodología experimental adoptada, se investigan los resultados obtenidos y se realiza una discusión de los mismos. Posteriormente, se presentan las conclusiones finales de esta tesis y algunas recomendaciones para estudios futuros.
